tests/snapshot/inputs/errors/typed_field_without_annotation.ncl
{
  foo : Number
      | doc "foo",
  bar : String,
}
